feat(service): persist accounts/transaction and create outbox event