@@ -3,12 +3,14 @@ package com.alpian.instantpay.service;
 import com.alpian.instantpay.api.dto.PaymentRequest;
 import com.alpian.instantpay.api.dto.PaymentResponse;
 import com.alpian.instantpay.infrastructure.persistence.entity.AccountEntity;
+import com.alpian.instantpay.infrastructure.persistence.entity.OutboxEventEntity;
 import com.alpian.instantpay.infrastructure.persistence.entity.TransactionEntity;
 import com.alpian.instantpay.infrastructure.persistence.entity.UserEntity;
 import com.alpian.instantpay.infrastructure.persistence.repository.AccountRepository;
 import com.alpian.instantpay.infrastructure.persistence.repository.OutboxEventRepository;
 import com.alpian.instantpay.infrastructure.persistence.repository.TransactionRepository;
 import com.alpian.instantpay.infrastructure.persistence.repository.UserRepository;
+import com.alpian.instantpay.service.exception.AccountNotFoundException;
 import com.alpian.instantpay.service.exception.IdempotencyException;
 import com.alpian.instantpay.service.exception.InsufficientFundsException;
 import com.alpian.instantpay.service.mapper.PaymentMapper;
@@ -18,7 +20,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.security.auth.login.AccountNotFoundException;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
@@ -36,9 +37,10 @@ public class PaymentService {
     private final ObjectMapper objectMapper;
 
     @Transactional
-    public PaymentResponse sendMoney(PaymentRequest request, UUID idempotencyKey, String senderUsername) throws AccountNotFoundException {
+    public PaymentResponse sendMoney(PaymentRequest request, UUID idempotencyKey, String senderUsername) {
         log.info("payment_send requested: sender={}, recip={}, amount={}, currency={}, idemKey={}",
-                senderUsername, request.recipientAccountId(), request.amount(), request.currency(), truncateIdem(idempotencyKey));
+                senderUsername, request.recipientAccountId(), request.amount(),
+                request.currency(), truncateIdem(idempotencyKey));
 
         transactionRepository.findByIdempotencyKey(idempotencyKey).ifPresent(existing -> {
             log.warn("duplicate_idempotency_key: idemKey={}", truncateIdem(idempotencyKey));
@@ -52,7 +54,7 @@ public class PaymentService {
         if (senderAccounts.isEmpty()) {
             throw new AccountNotFoundException("No account found for user: " + senderUsername);
         }
-        AccountEntity senderAccount = senderAccounts.get(0);
+        AccountEntity senderAccount = senderAccounts.getFirst();
 
         AccountEntity recipientAccount = accountRepository.findById(request.recipientAccountId())
                 .orElseThrow(() -> new AccountNotFoundException("Recipient account not found: " + request.recipientAccountId()));
@@ -62,10 +64,10 @@ public class PaymentService {
         ensureDifferentAccounts(senderAccount.getId(), recipientAccount.getId());
         ensurePositiveAmount(request.amount());
 
-        BigDecimal newSenderBalance = senderAccount.getBalance().subtract(request.amount());
-
+        var newSenderBalance = senderAccount.getBalance().subtract(request.amount());
         if (newSenderBalance.compareTo(BigDecimal.ZERO) < 0) {
-            log.warn("insufficient_funds: accountId={}, balance={}, requested={}", senderAccount.getId(), senderAccount.getBalance(), request.amount());
+            log.warn("insufficient_funds: accountId={}, balance={}, requested={}",
+                    senderAccount.getId(), senderAccount.getBalance(), request.amount());
             throw new InsufficientFundsException("Insufficient funds");
         }
 
@@ -81,7 +83,56 @@ public class PaymentService {
                 .idempotencyKey(idempotencyKey)
                 .build();
 
-        throw new UnsupportedOperationException("WIP");
+        accountRepository.save(senderAccount);
+        accountRepository.save(recipientAccount);
+        transactionRepository.save(tx);
+
+        var outbox = createOutboxEvent(tx);
+        outboxEventRepository.save(outbox);
+
+        log.info("payment_processed: txId={}, amount={}, currency={}",
+                tx.getId(), tx.getAmount(), tx.getCurrency());
+
+        return paymentMapper.toPaymentResponse(tx);
+    }
+
+    private OutboxEventEntity createOutboxEvent(TransactionEntity transaction) {
+        try {
+            String payload = objectMapper.writeValueAsString(createTransactionEvent(transaction));
+            return OutboxEventEntity.builder()
+                    .aggregateType("Transaction")
+                    .aggregateId(transaction.getId())
+                    .eventTopic("payment.completed")
+                    .payload(payload)
+                    .status(OutboxEventEntity.EventStatus.PENDING)
+                    .build();
+        } catch (Exception e) {
+            log.error("outbox_creation_failed: txId={}", transaction.getId(), e);
+            throw new RuntimeException("Failed to create outbox event", e);
+        }
+    }
+
+    private TransactionEvent createTransactionEvent(TransactionEntity transaction) {
+        return new TransactionEvent(
+                transaction.getId(),
+                transaction.getSenderAccount().getId(),
+                transaction.getRecipientAccount().getId(),
+                transaction.getAmount(),
+                transaction.getCurrency(),
+                transaction.getStatus().name(),
+                transaction.getCreatedAt()
+        );
+    }
+
+    private record TransactionEvent(
+            UUID transactionId,
+            UUID senderAccountId,
+            UUID recipientAccountId,
+            java.math.BigDecimal amount,
+            String currency,
+            String status,
+            java.time.OffsetDateTime createdAt
+    ) {
     }
 
     private void ensureCurrenciesMatch(String actual, String expected, String role) {
@@ -96,7 +147,7 @@ public class PaymentService {
         }
     }
 
-    private void ensurePositiveAmount(BigDecimal amount) {
+    private void ensurePositiveAmount(java.math.BigDecimal amount) {
         if (amount == null || amount.signum() <= 0) {
             throw new IllegalArgumentException("Amount must be positive");
         }
